log
ju., 21 de abr. de 2022 11:09:35: 
 tests:  1|8
total_score: 0/70
ecb73a0
ju., 21 de abr. de 2022 11:09:47: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
d8de181
ju., 21 de abr. de 2022 11:10:04: 
 tests:  1|8
total_score: 0/70
49440e4
ju., 21 de abr. de 2022 11:10:19: 
 tests:  1|8
total_score: 0/70
d5775ef
ju., 21 de abr. de 2022 11:11:13: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b7d03bb
ju., 21 de abr. de 2022 11:28:59: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, nodo->pair->key < key)){
                                    ^~~~
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
030ff6a
ju., 21 de abr. de 2022 11:29:47: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:60: error: comparison of distinct pointer types lacks a cast [-Werror]
         if (tree->lower_than (key, (int *) nodo->pair->key < key)){
                                                            ^
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, (int *) nodo->pair->key < key)){
                                    ^
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
87887b3
ju., 21 de abr. de 2022 11:30:06: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, nodo->pair->key < key)){
                                    ^~~~
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
6ae32e0
